# pyhood

./: .gitignore  CHANGELOG.md  LOG.md  README.md  SECURITY.md  STATUS.md  mkdocs.yml  pyproject.toml  revalidate_strategies.py
backtesting/: backtesting.md  pyproject.toml  revalidate_strategies.py
backtesting/autoresearch/: __init__.py  memory.py  models.py  overnight.py  program.md  runner.py
backtesting/backtest/: __init__.py  compare.py  engine.py  models.py  strategies.py
backtesting/docs/strategies/: donchian-breakout.md  golden-cross.md  index.md  keltner-squeeze.md  volume-confirmed-breakout.md
backtesting/examples/: autoresearch_demo.py  backtest_demo.py  strategy_catalog.py
backtesting/scripts/: run_overnight.py
backtesting/tests/: test_audit.py  test_autoresearch.py  test_backtest.py  test_memory.py  test_overnight.py
backtesting/tv_scraper/: LOG.md  README_ENRICHER.md  STATUS.md  config.py  page_structure.html  test_connection.py  tv_classify.py  tv_enrich.py  tv_perf_scrape.py  tv_scrape.py  validate_enrichment.py
backtesting/tv_scraper/backtest/: data.py  debug_macd_bounce.py  pine_backtest.py  run.py
backtesting/tv_scraper/backtest/cache/: eq_AAPL_1d_2016-03-25_2026-03-23_492337bc3208.parquet  eq_BTC-USD_1d_2016-03-25_2026-03-23_d940961d4ef5.parquet  eq_QQQ_1d_2016-03-25_2026-03-23_b839073f4c5e.parquet  eq_SPY_1d_2016-03-25_2026-03-23_da0797df4f8b.parquet  eq_SPY_1d_2021-03-24_2026-03-23_506f2bf6d088.parquet  eq_TSLA_1d_2016-03-25_2026-03-23_42a160925ff5.parquet
backtesting/tv_scraper/backtest/strategies/: donchian_breakout.py  ibs_spy.py  mean_reversion_nq.py  rsi_70_momentum.py  triple_ema_rsi_atr.py
backtesting/tv_scraper/data/pine_scripts/: 3_level_dca_buy_strategy.pine  6e_strat_g3p.pine  bp_strategy_malisa.pine  btc_cycle_rsi_linreg_bands_dca_strategy_v2.pine  btc_multi_tf_momentum_strategy_with_dca.pine  btcusd_quant_scoring_system_long_only.pine  btcusd_quant_trend_engine_long_only_v2_2x_leverage.pine  dee_mtf_atr_strategy_alert_3_tps.pine  ema50_for_gold_strategy_tf_15m.pine  es_cuh.pine  eth_momentum_breakout_strategy_geektradeonline.pine  for_albert.pine  gold_h1_breakout_failure_v110.pine  hek_dinamik_fiyat_kanalı_stratejisi_v1.pine  hermes.pine  lwtg_qcbp_v1010_multi_instrument_trading.pine  ma_strategy_dual_entry_filter.pine  macs_v6_final.pine  masu_institutional_fibonacci_mtf_btt.pine  mean_reversion_mirror.pine  mean_reversion_vp_strategy.pine  momentum_reversion.pine  mutanabby_ai_oneusdt_mr1.pine  ny_midnight_zone_retest_strategy.pine  order_block_volumatic_fvg_strategy.pine  parabolicsaremats_indie.pine  (+13 more)
(+139 files in other folders)
