[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backtest", "autoresearch"]

[project]
name = "pyhood-backtesting"
version = "0.1.0"
description = "Backtesting engine and strategy research toolkit (extracted from pyhood)"
readme = "backtesting.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "James Ford" },
]
keywords = ["backtesting", "trading", "strategies", "autoresearch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
